Termino do primeiro html baby

--- a/descricaoBaby/style-baby.css
+++ b/descricaoBaby/style-baby.css
@@ -145,6 +145,10 @@ a {
     margin-top: 10vh;
 }
 
+button{
+    cursor: pointer;
+}
+
 .btn-whatsapp {
     margin-left: 3vh;
 }
@@ -215,7 +219,6 @@ a {
 #divMeiasBaby {
     align-items: center;
     width: 320px;
-    height: 420px;
     margin-top: 10vh;
     border: 1px solid #A5A5A5;
     border-radius: 20px;
@@ -289,18 +292,16 @@ a {
 
 /* ARRUMANDO AS IMAGENS PELO JSON */
 
-.imagemCanoCurto-Feminina{
+.img-baby{
     width: 50vh;
     height: 43vh;
 }
-.ImagemPreta-Kit3{
-    width: 80vh;
-    height: 45vh;
+
+.img-babyKit{
+    width: 65vh;
+    height: 30vh;
 }
-.imagemCanoCurtoBrancaCinza-Feminina{
-    width: 43vh;
-    height: 35vh;
-}
+
 
 /* arrumando as imagens das meias cano curto */
 
@@ -360,6 +361,7 @@ a {
     font-weight: 600;
     font-size: 2.55vh;
     margin-top: 3vh;
+    margin-bottom: 20px;
 }
 
 
