--- a/baby.css
+++ b/baby.css
@@ -108,7 +108,8 @@ a {
 .cores-marrom-azul,
 .cores-vermelho-amarelo,
 .cores-azulTurquesa-cinza,
-.cores-kit-des-0a6 {
+.cores-kit-des-0a6,
+.cores-kit-des-6a12 {
     display: flex;
     gap: 1vh;
     margin-top: 0.75vh;
@@ -294,12 +295,19 @@ a {
     font-weight: 600;
     font-size: 3vh;
     margin-bottom: 20px;
+    cursor: pointer;
 }
 
 #botao-da-meia-preta-branca-cinza {
     margin-top: 6.75vh;
     font-family: 'WorkSans';
     font-weight: 600;
+}
+
+
+.selected {
+    border: 2px solid #000000 ;
+    border-radius: 50%; 
 }
 
 
@@ -541,8 +549,4 @@ a {
     }
 }
 
-@media screen and (max-width: 800px){
-    .Quadrado-da-meia-kit1-0a6, .Quadrado-da-meia-kit1-6a12{
-        margin: 0;
-    }
-}
+
