--- a/CanoCurtoFem.css
+++ b/CanoCurtoFem.css
@@ -116,10 +116,10 @@ a {
     margin-top: 0.75vh;
 }
 
-.selected {
+/* .selected {
     border: 2px solid #000000;
     border-radius: 50%;
-}
+} */
 
 .tresCoresKit,
 .branca,
@@ -570,6 +570,10 @@ a {
     border-radius: 50%;
 }
 
+
+
+
+
 .BrancaRendada {
     background-color: white;
     border: 1px solid rgb(163, 160, 160);
@@ -587,30 +591,30 @@ a {
 /* MEIA CANO LONGO CASUAL */
 
 .Quadrado-da-meia-abelha-cano-longo img,
-/* imagem da primeira meia, preta cano curto */
 .Quadrado-da-meia-cacto-cano-longo img,
-/* imagem da meia, verde cano curto */
 .Quadrado-da-meia-caveira-cano-longo img,
-/* imagem da meia, rosa cano curto */
 .Quadrado-da-meia-melancia-cano-longo img,
 .Quadrado-da-meia-vaquinha-cano-longo img,
 .Quadrado-da-meia-arcoIris-cano-longo img {
-    /* imagem dameia, preta com rosa cano curto */
     width: 250px;
     height: 200px;
 }
 
+
+
 .cor-da-meia-caveira,
 .cor-da-meia-abelha,
-.cor-da-meia-ArcoIris,
+.cor-da-meia-arcoIris,
 .cor-da-meia-cacto,
 .cor-da-meia-vaquinha,
-.cor-da-meia-melancia{
+.cor-da-meia-melancia {
     display: flex;
     gap: 1vh;
     margin-top: 0.75vh;
     cursor: pointer;
 }
+
+
 
 .ArcoIris img,
 .caveira img,
@@ -621,4 +625,18 @@ a {
     width: 5vh;
     height: 5vh;
     border-radius: 50%;
+}
+
+.selected {
+    border: 2px solid #000000;
+    width: 5vh;
+    height: 5vh;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.selected img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
