--- a/CanoCurtoFem.css
+++ b/CanoCurtoFem.css
@@ -213,7 +213,7 @@ a {
     height: 200px;
 }
 
-.tudoKit{
+.tudoKit {
     margin-top: 4vh;
 }
 
@@ -655,7 +655,7 @@ a {
 .cor-da-meia-VerdeMusgo div,
 .cor-da-meia-PretaRosa div,
 .cor-da-meia-BrancaAzulEscuro div {
-  
+
     margin-top: 0.75vh;
     cursor: pointer;
     width: 5vh;
@@ -668,25 +668,56 @@ a {
     background-color: #A7E520;
 
 }
-.VerdeMusgo{
+
+.VerdeMusgo {
     background-color: #52703C;
 }
 
-.BrancaAzulEscuro{
+.BrancaAzulEscuro {
     background-color: #262473;
 }
-.PretaRosa{
+
+.PretaRosa {
     background-color: #F26BB5;
 }
-.RoxaPreta{
+
+.RoxaPreta {
     background-color: #BF36A8;
 }
-.PretaBranca{
+
+.PretaBranca {
     background-color: white;
     border: 1px solid rgb(95, 92, 92);
 }
 
-.container img{
+.container img {
     width: 240px;
     height: 198px;
+}
+
+/* MOBILE */
+
+
+@media screen and (max-width: 768px) {
+.Quadrado-da-meia-preta-cano-curto img,
+.Quadrado-da-meia-verde-cano-curto img,
+.Quadrado-da-meia-BrancaRosa-cano-curto img ,
+.Quadrado-da-meia-pretaRosa-cano-curto img {
+
+    width: 220px;
+    height: 180px;
+
+}
+
+#div-meia-cano-curto {
+    align-items: center;
+    width: 300px;
+    margin-top: 10vh;
+   
+}
+
+#containerkit img{
+    width: 300px;
+    height: 110px;
+}
 }
