--- a/baby.css
+++ b/baby.css
@@ -113,23 +113,33 @@ a {
 .cores-branca-verde-colors,
 .cores-branca-verde-colors2,
 .cores-kit-colors-masc,
-.cores-kit-colors-masc2 {
+.cores-kit-colors-masc2,
+.cores-branca-vermelho-malha,
+.cores-branca-cinza-faixa {
     display: flex;
     gap: 1vh;
     margin-top: 0.75vh;
 }
 
-.verde, .offwhite, .cinza,
-.branca, .azul, .marinho,
-.marrom, .azulTriangulo, .vermelho,
-.amarelo, .azulTurquesa, .cinzaMescla,
-.kit1Des0a6, .kit2Des0a6, .kit1Des6a12,
-.kit2Des6a12, .brancaC, .azulC,
-.marinhoC, .cinzaC, .verdeC,
-.brancaC2, .azulC2, .marinhoC2,
-.cinzaC2, .verdeC2, .kit1Colors1,
-.kit2Colors1, .kit1Colors2,
-.kit2Colors2  {
+.verde,
+.offwhite,
+.cinza,
+.branca,
+.azul,
+.marinho,
+.marrom,
+.azulTriangulo,
+.vermelho,
+.amarelo,
+.azulTurquesa,
+.cinzaMescla,
+.kit1Des0a6, .kit2Des0a6, .kit1Des6a12, .kit2Des6a12,
+.brancaC, .azulC, .marinhoC,
+.cinzaC, .verdeC,
+.brancaC2, .azulC2, .marinhoC2, .cinzaC2, .verdeC2,
+.kit1Colors1, .kit2Colors1, .kit1Colors2, .kit2Colors2,
+.brancaM, .azulM, .verdeM, .marinhoM, .vermelhoM,
+.brancaF, .cinzaF {
     width: 5vh;
     height: 5vh;
     border-radius: 50%;
@@ -137,7 +147,11 @@ a {
 }
 
 .branca,
-.brancaKit, .brancaC, .brancaC2  {
+.brancaKit,
+.brancaC,
+.brancaC2,
+.brancaM,
+.brancaF {
     background-color: #ffffff;
     border: 1px solid #76767688;
 }
@@ -164,7 +178,10 @@ a {
     background-color: #8FC1EF;
 }
 
-.marinho, .marinhoC, .marinhoC2 {
+.marinho,
+.marinhoC,
+.marinhoC2,
+.marinhoM {
     background-color: #0F1922;
 }
 
@@ -176,7 +193,7 @@ a {
     background-color: #0385DE;
 }
 
-.vermelho {
+.vermelho, .vermelhoM {
     background-color: #D30411;
 }
 
@@ -192,20 +209,35 @@ a {
     background: linear-gradient(to right, #ABB0AA 50%, #0389DB 50%);
 }
 
-.azulC, .azulC2{
+.azulC,
+.azulC2 {
     background-color: #76A6EF;
 }
 
-.cinzaC, .cinzaC2{
+.cinzaC,
+.cinzaC2,
+.cinzaF {
     background-color: #7F9299;
 }
 
-.verdeC, .verdeC2{
+.verdeC,
+.verdeC2,
+.verdeM {
     background-color: #81D49E;
 }
 
-.kit1Des0a6, .kit2Des0a6, .kit2Des6a12, .kit1Des6a12, .kit1Colors1,
-.kit2Colors1,  .kit1Colors2, .kit2Colors2{
+.azulM{
+    background-color: #9ED5F3;
+}
+
+.kit1Des0a6,
+.kit2Des0a6,
+.kit2Des6a12,
+.kit1Des6a12,
+.kit1Colors1,
+.kit2Colors1,
+.kit1Colors2,
+.kit2Colors2 {
     /* background: linear-gradient(to right, #07D90A 33%, #96A6B5 33%, #96A6B5 66%, #8FC1EF 66%) */
     background-color: #ffffff;
     border: 1px solid #76767688;
@@ -214,20 +246,27 @@ a {
     justify-content: center;
 }
 
-.kit1Des0a6 p, .kit2Des0a6 p, .kit1Des6a12 p, .kit2Des6a12, .kit1Colors1 p,
-.kit2Colors1 p, .kit1Colors2 p, .kit2Colors2 p{
+.kit1Des0a6 p,
+.kit2Des0a6 p,
+.kit1Des6a12 p,
+.kit2Des6a12,
+.kit1Colors1 p,
+.kit2Colors1 p,
+.kit1Colors2 p,
+.kit2Colors2 p {
     font: 400 16px 'WorkSans', sans-serif;
 }
 
 
-.parte2{
+.parte2 {
     display: flex;
     justify-content: center;
     gap: 20vh;
     flex-wrap: wrap;
 }
 
-.Quadrado-da-meia-kit1-0a6, .Quadrado-da-meia-kit1-6a12{
+.Quadrado-da-meia-kit1-0a6,
+.Quadrado-da-meia-kit1-6a12 {
     margin: 0 50px;
 }
 
@@ -240,7 +279,9 @@ a {
 .Quadrado-da-meia-marinheiro img,
 .Quadrado-da-meia-leao img,
 .Quadrado-da-meia-colors1 img,
-.Quadrado-da-meia-colors2 img {
+.Quadrado-da-meia-colors2 img,
+.Quadrado-da-meia-malha img,
+.Quadrado-da-meia-sap-faixa img {
     width: 220px;
     height: 200px;
 }
@@ -259,7 +300,8 @@ a {
     margin: 45px;
 }
 
-.Quadrado-da-meia-kitcolors1 img, .Quadrado-da-meia-kitcolors2 img{
+.Quadrado-da-meia-kitcolors1 img,
+.Quadrado-da-meia-kitcolors2 img {
     width: 320px;
     height: 150px;
     margin: 13px 0;
@@ -327,8 +369,8 @@ a {
 
 
 .selected {
-    border: 2px solid #000000 ;
-    border-radius: 50%; 
+    border: 2px solid #000000;
+    border-radius: 50%;
 }
 
 
@@ -511,7 +553,7 @@ a {
 
 /* VERSÃO MOBILE */
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 768px) {
     .container-rodape {
         padding: 50px 50px;
     }
@@ -568,6 +610,40 @@ a {
         justify-content: center;
         /* Centraliza o conteúdo */
     }
+
+    .Quadrado-da-meia-elefante img,
+    .Quadrado-da-meia-quadrados img,
+    .Quadrado-da-meia-astronauta img,
+    .Quadrado-da-meia-triangulo img,
+    .Quadrado-da-meia-marinheiro img,
+    .Quadrado-da-meia-leao img,
+    .Quadrado-da-meia-colors1 img,
+    .Quadrado-da-meia-colors2 img,
+    .Quadrado-da-meia-kit1-0a6 img,
+    .Quadrado-da-meia-kit2-0a6 img,
+    .Quadrado-da-meia-kit1-6a12 img,
+    .Quadrado-da-meia-kit2-6a12 img,
+    .Quadrado-da-meia-kitcolors1 img,
+    .Quadrado-da-meia-kitcolors2 img,
+    .Quadrado-da-meia-malha img,
+    .Quadrado-da-meia-sap-faixa img {
+        width: 220px;
+        height: 180px;
+    }
+
+    #div-meia{
+        align-items: center;
+        width: 300px;
+        margin-top: 10vh;
+
+    }
+
+    #containerkit img {
+        width: 300px;
+        height: 110px;
+    }
+
+    .titulo{
+        margin-top: 65px;
+    }
 }
-
-
